libpam-x2go (0.0.1.1-0~x2go1) UNRELEASED; urgency=low

  * Continue development...

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 30 Apr 2013 17:40:29 +0200

libpam-x2go (0.0.1.0-0~x2go1) unstable; urgency=low

  * New upstream version (0.0.1.0):
    - Adapt to changes in lightdm-remote-login-x2go (0.0.1.0). Expect
      a UCCS service that supports session type »x2go».

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sat, 27 Apr 2013 13:44:14 +0200

libpam-x2go (0.0.0.2-0~x2go1) unstable; urgency=low

  [ Jan Engelhardt ]
  * New upstream version (0.0.0.2):
    - Continue to run even in the absence of AM_SILENT_RULES.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 24 Apr 2013 18:30:22 +0200

libpam-x2go (0.0.0.1-0~x2go1) unstable; urgency=low

  * Initial upstream release. Forked from libpam-freerdp (by Ted Gould
    <ted@canonical.com>).
  * Adaptations of the forked original to work with X2Go:
    - Check the authentication token via libssh (ssh login to the remote
      server).
    - Set PAM_SM_AUTH and PAM_SM_SESSION before including
      security/pam_modules.h.
  * /debian/rules:
    - Override auto_build with our own automake mechanism.
  * /debian/control:
    - Depend on dh-autoreconf.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sat, 10 Nov 2012 22:21:10 +0100