@@ -1,7 +1,9 @@
 
-SUBDIRS = \
-	src \
-	tests
+SUBDIRS = src
+
+if HAVE_GTEST
+SUBDIRS += tests
+endif
 
 DISTCHECK_CONFIGURE_FLAGS = --enable-localinstall
 
