@@ -1,6 +1,8 @@
 libpam-x2go (0.0.1.1-0~x2go1) UNRELEASED; urgency=low
 
-  * Continue development...
+  [ Jan Engelhardt ]
+  * New upstream version (0.0.1.1):
+    - Make building tests optional. (Fixes: #196).
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 30 Apr 2013 17:40:29 +0200
 
